--- a/res/layout/activity_calender.xml
+++ b/res/layout/activity_calender.xml
@@ -3,10 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
+    android:paddingBottom="2dp"
+    android:paddingLeft="2dp"
+    android:paddingRight="2dp"
+    android:paddingTop="2dp"
+    android:background="#79BAEC"
     tools:context=".CalenderActivity" >
 
     <LinearLayout
@@ -20,14 +21,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="gotoHome"
-            android:text="@string/home" />
+            android:background="@drawable/home" />
 
         <Button
             android:id="@+id/main_calender"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/calender" />
+            android:background="@drawable/calender" />
 
         <Button
             android:id="@+id/main_fun"
@@ -35,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="gotoFun"
-            android:text="@string/fun" />
+            android:background="@drawable/fun" />
     </LinearLayout>
 
     <View
