--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="2dp"
     android:paddingRight="2dp"
     android:paddingTop="2dp"
-    android:background="#808000"
+    android:background="#79BAEC"
     tools:context=".MainActivity" >
 
    <LinearLayout
@@ -20,8 +20,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/home"
-            android:textColor="#800080" />
+            android:background="@drawable/home" />
 
         <Button
             android:id="@+id/main_calender"
@@ -29,8 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="gotoCalender"
-            android:text="@string/calender"
-            android:textColor="#800080" />
+            android:background="@drawable/calender" />
 
         <Button
             android:id="@+id/main_fun"
@@ -38,8 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="gotoFun"
-            android:text="@string/fun"
-            android:textColor="#800080" />
+            android:background="@drawable/fun" />
     </LinearLayout>
 
     <View
