--- a/res/layout/single_contact.xml
+++ b/res/layout/single_contact.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:paddingLeft="14dp"
+    android:paddingTop="2dp"
+    android:paddingRight="14dp" >
 
     <LinearLayout
         android:layout_width="wrap_content"
